--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -346,3 +346,30 @@ button {
   color: #666;
   margin: 0;
 }
+
+/* 로그인 */
+.Login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: center / cover url("/media/img/login_bg.jpg") no-repeat;
+  text-align: center;
+  overflow: hidden;
+}
+
+.Login .input_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 37vw;
+  height: 50vh;
+  max-width: 600px;
+  max-height: 500px;
+  min-width: 500px;
+  min-height: 400px;
+  border-radius: 60px 0px;
+  background: rgba(102, 102, 102, 0.6);
+}
