--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -364,6 +364,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 37vw;
   height: 50vh;
   max-width: 600px;
@@ -372,4 +373,6 @@ button {
   min-height: 400px;
   border-radius: 60px 0px;
   background: rgba(102, 102, 102, 0.6);
+}
+.Login {
 }
